--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,10 +3,10 @@ version: 0.2
 phases:
   install:
     commands:
-      - npm install
+      - yarn install
   build:
     commands:
-      - npm run build
+      - yarn run build
 
 artifacts:
   files:
